test/expected/diag_command_not_found_fatal.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "zzqqxxnonexist_command_4242"]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "after"]
[Word
  Unquoted "zzqqxxnonexist_command_4242"
]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "after"
]
shit: 2:1: error: Command 'zzqqxxnonexist_command_4242' was not found.
     2 |  zzqqxxnonexist_command_4242
       |  ^~~~~~~~~~~~~~~~~~~~~~~~~~~ here.
[Code 1]
